[package]
name = "wots"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Winternitz One-Time Signatures over Keccak-256 — a quantum-resistant signature primitive sized to fit a Solana transaction."

[dependencies]
sha3 = { version = "0.10", default-features = false }
