[package]
name = "wots"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Winternitz One-Time Signatures over Keccak-256 — a quantum-resistant signature primitive sized to fit a Solana transaction."

[features]
default = ["sha3-backend"]
# Off-chain / tests: pure-Rust Keccak-256.
sha3-backend = ["dep:sha3"]
# On-chain: use Solana's keccak syscall (far cheaper in compute units).
solana-backend = ["dep:solana-program"]

[dependencies]
sha3 = { version = "0.10", default-features = false, optional = true }
solana-program = { version = "2.1", optional = true }
